# uemacs

./: .gitignore  Cargo.toml  README
src/: kbd.rs  lock.rs  main.rs  tests.rs
src/bind/: descriptions.rs  lookup_name.rs  mod.rs  names.rs  table.rs  tests.rs
src/buffer/: buffers_ops.rs  mod.rs  ops.rs  tests.rs
src/core/: command.rs  error.rs  flags.rs  ids.rs  mod.rs  tests.rs  undo.rs
src/display/: display_modeline.rs  display_render.rs  display_update.rs  mod.rs  tests.rs
src/edit/: editor_adjustmode.rs  editor_describe_bindings.rs  editor_evaluate_env_var.rs  editor_evaluate_expression.rs  editor_execute_lines_inner.rs  editor_insert_file.rs  editor_invoke_function.rs  editor_isearch.rs  editor_new.rs  editor_query_replace.rs  editor_query_replace_apply.rs  editor_quote_char.rs  editor_replace_string.rs  editor_run_command.rs  editor_switch_window_to_buffer.rs  free_ctlx_command.rs  free_macro_number.rs  free_splice_string.rs  free_stol.rs  mod.rs
src/edit/impls/: blank.rs  buffers.rs  char_delete.rs  cmode.rs  detab.rs  editor_io.rs  fillpara.rs  helpers_char.rs  helpers_misc.rs  helpers_para.rs  helpers_region.rs  helpers_word.rs  indent.rs  inline_tests.rs  insert_char.rs  justify.rs  kill_line.rs  mark.rs  mod.rs  motion_char.rs  motion_line.rs  motion_para.rs  open_insert.rs  page.rs  para_kill.rs  word.rs  (+6 more)
src/file/: mod.rs  tests.rs
src/input/: mod.rs  tests.rs
src/line/: mod.rs  tests.rs
src/lock/: tests.rs
src/search/: mod.rs  tests.rs
src/terminal/: mock.rs  mod.rs  tests.rs
src/util/: mod.rs  tests.rs
src/window/: mod.rs  tests.rs
(+3 files in other folders)
